--- a/notebooks/05_data_transfer.qmd
+++ b/notebooks/05_data_transfer.qmd
@@ -14,18 +14,18 @@ The main challenges users may face adapting Artemis workflows to Gadi are:
  
 - [Adjusting PBS directives to suit Gadi requirements and queue structure](./08_job_script)
 - [Lack of internet access for Gadi compute nodes](./08_job_scripts)
-- [Data transfer]
+- Data transfer
 - [Gadi walltime limit of 48 hours](./12_walltime.qmd)
 - [Understanding NCI accounting of KSU, disk and iNode limits](./06_accounting.qmd)
 - [Automatic 100-day Gadi /scratch purge policy](https://opus.nci.org.au/spaces/Help/pages/241926268/Recover+Files...#RecoverFiles...-RecoverQuarantinedFilesonscratch)
 - [Software installation and version upgrades on Gadi](./11_software.qmd)
 - [Job arrays not supported on Gadi](./13_parralel_jobs.qmd)
  
-In this section, we will look at Data Transfer. For the remaining challenges, please visit the specific linked content. We will run training sessions on some of these during the lead up to the Artemis decomission date.
+In this section, we will look at Data Transfer. For the remaining challenges, please visit the specific linked content. We will run training sessions on some of these during the lead up to the Artemis decommission date.
 
 ## Where to put project files on Gadi
 
-On Gadi (like on Artemis) you have access to a number of different storage areas for project files and data. Check the [NCI User Guides](https://opus.nci.org.au/spaces/Help/pages/236880086/Gadi+Resources...) for more detailed information. Here we provide a brief introduction for those falimiar with Artemis.
+On Gadi (like on Artemis) you have access to a number of different storage areas for project files and data. Check the [NCI User Guides](https://opus.nci.org.au/spaces/Help/pages/236880086/Gadi+Resources...) for more detailed information. Here we provide a brief introduction for those familiar with Artemis.
 
 Each space is intended for use in a specific way:
 
@@ -41,7 +41,7 @@ Your /g/data space (`/g/data/<project>`) is owned by your project and has the av
 
 The files on /g/data are not backed up but they will persist there for the lifetime of your project.
 
-/g/data is inteded to be used to store longer term files that are reqularly used by your project during its lifetime. Always ensure your data is regularly backed up from here to the Research Data Store.
+/g/data is intended to be used to store longer term files that are regularly used by your project during its lifetime. Always ensure your data is regularly backed up from here to the Research Data Store.
 
 `/g/data` may be accessed directly from PBS job scripts by using the `-lstorage` PBS directive.
 
@@ -51,15 +51,11 @@ Your scratch space (`/scratch/<project_id>`) is owned by your project and has 1 
 
 Data are not backed up and files not accessed for 100 days will be quarantined for 14 days and then removed. Scratch should be used for temporary files associated with a job that has large data IO and not for longer term storage. Always ensure any data you need from a job that is left in /scratch is promptly backed up to the Research Data Store.
 
-To check the amount of disk space you have available in the data areas listed above you can use:
-
-```bash
-$ lquota
-```
+To check the amount of disk space you have available in the data areas listed above you can type the command `lquota` at the Gadi prompt.
 
 ## Research data store (RDS)
 
-The RDS is NOT being decommisioned along with Artemis HPC. Any RDS projects you currently have will persist on RDS. It is your responsibility to backup any data on Artemis filesystems (`/home`, `/scratch`, `/project`) that you wish to keep prior to the decomission date of August 29 2025. For information on how to go about this see the 
+The RDS is NOT being decommissioned along with Artemis HPC. Any RDS projects you currently have will persist on RDS. It is your responsibility to backup any data on Artemis filesystems (`/home`, `/scratch`, `/project`) that you wish to keep prior to the decommission date of August 29 2025. For information on how to go about this see the 
 [SIH Artemis Training Series](https://sydney-informatics-hub.github.io/training.artemis.rds/04-rcos2hpc/index.html).
 
 In this section, we will mainly focus on how to transfer data between Gadi HPC and RDS. You should be able follow similar methods for copying data between your own laptop/server and Gadi.
@@ -71,7 +67,7 @@ Depending on the size and complexity of the data you are transferring you have m
 
   + For mid sized transfers up to tens of GB you can use terminal based transfer.
 
-  + For large transfers (>100GB) you sould use the data transfer queue options on either Gadi (`dataq`) or Artemis (`dtq`). 
+  + For large transfers (>100GB) you should use the data transfer queue options on either Gadi (`dataq`) or Artemis (`dtq`). 
 
 ::: {.callout-warning}
 All data transfer to and from Gadi should be made using the "Data Mover Node" at `gadi-dm.nci.org.au` where possible rather than the login nodes. This ensures that data transfer will not consume resources on the otherwise limited login nodes.
@@ -85,9 +81,9 @@ In the meantime, the below options are available, and detailed examples for each
 
 ### Transfer using RDS mapped network drive and data transfer client
 
-For smaller files or datasets, you can map your RDS project as a network drive and transfer the data to Gadi via an intermediate data transfer client GUI such as `filezilla` or `cyberduck`.
+For smaller files or datasets, for example your code that you are going to run, you can map your RDS project as a network drive and transfer the data to Gadi via an intermediate data transfer client GUI such as `filezilla` or `cyberduck`.
 
-While simple to use, these are not recommended for large data transfers, as the local computer becomes a bottleneck and they are generally not resumeable after interruption. Faster speeds will be obtained if you are on campus, but still this method may be prohibitively slow for larger datasets.
+While simple to use, these are not recommended for large data transfers, as the local computer becomes a bottleneck and they are generally not resumable after interruption. Faster speeds will be obtained if you are on campus, but still this method may be prohibitively slow for larger datasets.
 
 ::: {.callout-note}
 ## Example using `cyberduck`
@@ -113,13 +109,15 @@ You can then transfer data to and from RDS and NCI by dragging and dropping file
 
 ### Transfer from Gadi/Artemis terminal to/from RDS
 
-You can use commands in your terminal application (Mac and linux: Terminal, Windows: Windows Terminal or Powershell equivalent) as an alternative to graphical applications. However, since the connection will be terminated if your computer sleeps, terminal crashes, network drops out etc, this method is not particualrly robust for large transfers. For these rather use the queue based methods (either `copyq` or Gadi or `dt-queue` on Artemis) described below.
+You can use commands in your terminal application (Mac and linux: Terminal, Windows: Windows Terminal or Powershell equivalent) as an alternative to graphical applications. However, since the connection will be terminated if your computer sleeps, terminal crashes, network drops out etc, this method is not particularly robust for large transfers. For these rather use the queue based methods (either `copyq` or Gadi or `dt-queue` on Artemis) described below.
 
 #### Transfers from a terminal on Gadi
 
 Due to stringent security settings around Artemis and RDS, familiar commands like `rsync` or `scp` **cannot** be initiated from NCI Gadi login nodes. Instead you have to use commands like `sftp` to copy the data.
 
-Please note that running these commands on the login nodes are not the recommended way to transfer research data to Gadi! For smaller downloads, this is OK, but for normal purposes the use of Gadi’s copyq and data mover nodes are the appropriate tools.
+::: {.callout-warning}
+Please note that running these commands on the login nodes are not the recommended way to transfer research data to Gadi! For smaller downloads, this is OK, but for normal purposes the use of Gadi’s `copyq` and data mover nodes are the appropriate tools.
+:::
 
 ::: {.callout-note}
 ## How to transfer data from RDS to Gadi (and vice-versa) from a Gadi login.
@@ -131,6 +129,8 @@ To transfer data between RDS and Gadi from the Gadi login shell:
   ```bash
   ssh <NCI userid>@gadi.nci.org.au
   ```
+
+  You may be prompted to enter your NCI password at this point.
 
   2. Get the data from RDS, to a specific location on Gadi, e.g:
 
@@ -156,7 +156,7 @@ If you want to copy the other way around (ie. from Gadi /scratch to RDS) use
 #### Transfers from a terminal on Artemis using rsync
 
 ::: {.callout-warning}
-This option is only available prior to the decommission of Artemis on 29 August 2025 - after that date you will have to use either GLOBUS (*preferred*), or copy data when logged into the Gadi terminal (wither at the login shell or using `copyq` scripts).
+This option is only available prior to the decommission of Artemis on 29 August 2025 - after that date you will have to use either GLOBUS (*preferred*), or copy data when logged into the Gadi terminal (either at the login shell or using `copyq` scripts).
 :::
 
 When logged into Artemis you can use the `rsync` or `scp` command to copy data directly to/from Gadi, since Gadi allows the kind to secure connection that these commands require.
@@ -179,6 +179,8 @@ To transfer data between RDS and Gadi from the Artemis login shell:
   ```bash
   ssh <Your UniKey>@hpc.sydney.edu.au
   ```
+
+  You may be prompted to enter your password at this stage.
 
   2. Copy the data from  `rds`, to a specific location on Gadi, e.g:
 
@@ -205,184 +207,54 @@ If you want to copy the other way around (ie. from Gadi /scratch to RDS) then si
 #### Using `screen` to run your job in the background
 
 ::: {.callout-warning}
-While this method can help you run your copy job in the background over a long period of time, it is reccommended to rather use the `copyq` transfer method described below for large file transfers.
+While this method can help you run your copy job in the background over a long period of time, it is recommended to rather use the `copyq` transfer method described below for large file transfers, as running jobs on the login node can overwhelm their scant resources.
 :::
 
 You can run all of the above copy commands in a `screen` session which can be *detached* to the background allowing you to log out of Gadi and switch off your computer while the copy still runs in the background.
 
 To do this, after logging in (step 1. above) enter the command `screen` at the prompt. This will send you into a screen terminal session, then inside the screen session enter the copy command (step 2. above) and the copy will start. Then while the copy command is running, enter `<ctrl> - d` to detach the screen session and return to the login prompt. You can now log out of Gadi while your copy job is running in the background on Gadi. To check its status simply log back into Gadi in a terminal (step 1. above) and enter the command `screen -r`. This will re-attach your running screen session and you can investigate its output to check if its done. When things are finished you can exit the running screen session by typing `exit` inside it.
 
-### Transfer using sftp or lftp from Gadi copyq
+### Transfer using `sftp` or `lftp` from Gadi `copyq`
 
 The data transfer queue on Gadi is called `copyq`. This is comparable to the data transfer queue on Artemis `dtq`. Data transfer methods/scripts that you used to put data onto Artemis for example from the web via `wget` or from another server should be easily portable to use on Gadi's `copyq`. 
 
-Please note that the compute nodes on Gadi **do not have** internet access like the Artemis compute nodes do, so all required data must first be downloaded before submitting a compute job that requries the data.  
+Please note that the compute nodes on Gadi **do not have** internet access like the Artemis compute nodes do, so all required data must first be downloaded before submitting a compute job that requires the data.  
 
-Due to stringent security settings around Artemis and RDS, commands like `rsync` or `scp` **cannot** be initiated from NCI Gadi login nodes or `copyq`. To initiate the transfer from Gadi, `sftp` must be used.  One can `rsync` or `scp` from Artemis login nodes or using `dtq` to Gadi, however this option will of course cease when Artemis is decomissioned. In the not too distant future Globus will become available for data transfer and then that will be the preferred method for transferring data to and from Gadi.
+Due to stringent security settings around Artemis and RDS, commands like `rsync` or `scp` **cannot** be initiated from NCI Gadi login nodes or `copyq`. To initiate the transfer from Gadi, `sftp` or `lftp` must be used. In the not too distant future Globus will become available for data transfer and then that will be the preferred method for transferring data to and from Gadi.
 
-#### Template copyq scripts for transferring data
+::: {.callout-warning}
+Before you use the scripts below with `copyq`, you will need to set up SSH keys first to enable passwordless login. See the section **Set up SSH keys for passwordless data transfer** for detailed step-by-step instructions in how to do this. You only need to set this up once.
+:::
 
-The scripts below use sftp to transfer data between RDS and Gadi on the Gadi copyq.
+#### Template copyq scripts for transferring data with `sftp`
 
-Copies of these scripts have been placed in /scratch/qc03/data-transfer-scripts/gadi-scripts.
+The scripts below use sftp to transfer data between RDS and Gadi on the Gadi copyq. `sftp` can transfer whole files and directories but must copy all of your data every time, it cannot only copy modified files like `rsync` can. This makes it considerably slower for copying large datasets where only minor changes have been made during a run. An alternative command `lftp` can behave like `rsync` but is slower to transfer than `sftp`. We also provide a template `lftp` script below. 
 
-You can make a copy of these scripts to your /scratch/<nci-project-code> or /home/<nci-user-id> workspace on Gadi and edit to suit your needs.
+Copies of these scripts have been placed in `/scratch/qc03/data-transfer-scripts/gadi-scripts`. You can make a copy of these scripts to your /scratch/<nci-project-code> or /home/<nci-user-id> workspace on Gadi and edit (for example using `nano <script>`), by replacing the names described in the header to suit your needs.
 
-```bash
-cp /g/data/<project>/scripts/transfer.pbs /scratch/<project>/<workspace>
-```
+There are two scripts: 
 
-Then follow the script and move to that workspace: 
-```bash
-cd /scratch/<project>/<workspace>
+  + `from_gadi_to_rds.pbs` is used to transfer a file or folder from Gadi to RDS
 
-```
-
-You need to edit the script and fill in the following details before using it: 
-
-In the `# PBS` variables part of the script: 
-
-* Provide the -P variable by replacing `<project>` with your Gadi project code for accounting 
-* Increase the walltime if you are transferring large files, the limit on this queue is 10 hours
-* Alter `-lstorage=scratch/<project>` as required. If you also need to access g/data, you can change this to `scratch/<project>+/gdata/<project>`
-
-In the body of the script: 
-
-* Provide the `remote_user` variable by replacing `<unikey>` with your USyd unikey
-* Provide the `remote_host` variable by replacing `<project>` with your USyd Artemis/RDS project code
-* Provide the `remote_path` variable by replacing `<path>` with the path to the file or directory you want to transfer, excluding the name of the file or directory to be transferred. This will be provided further down in the script.
-
-
-For example, to download a bam file from RDS to Gadi, I'd only unhash the `Download a file from RDS to Gadi` section: 
-
-```bash
-#!/bin/bash
-
-# This is a Gadi data transfer script
-
-#PBS -P aa00
-#PBS -N transfer
-#PBS -l walltime=10:00:00
-#PBS -l ncpus=1
-#PBS -l mem=8GB
-#PBS -W umask=022
-#PBS -q copyq
-#PBS -l wd
-#PBS -lstorage=scratch/aa00
-
-# Remote server details:
-remote_user=gsam0000
-remote_host=research-data-ext.sydney.edu.au
-remote_path=/rds/PRJ-MYPROJECT/bams
-
-# Download a file from RDS to Gadi:
-dest_path=/scratch/aa00/bams
-remote_file=sample.bam
-sftp ${remote_user}@${remote_host}:${remote_path}/${remote_file} ${dest_path} 
-
-# Download a directory from RDS to Gadi:
-#remote_dir=<dirname>
-#sftp -r ${remote_user}@${remote_host}:${remote_path}/${remote_dir} ${dest_path} 
-
-# Upload a file from Gadi to RDS:
-#local_file=<filename>
-#sftp ${remote_user}@${remote_host}:${remote_path} <<< $"put ${local_file}" 
-
-# Upload a directory from Gadi to RDS:
-# CAVEAT: this method will only work if directory of the same name exists at destination! 
-#local_dir=<dirname>
-#sftp ${remote_user}@${remote_host}:${remote_path} <<< $"put -r ${local_dir}" 
-```
-
-For example, to download a directory containing multiple `fastq.gz` files from RDS to Gadi, I'd only unhash the `Download a directory from RDS to Gadi` section: 
-
-```bash
-#!/bin/bash
-
-# This is a Gadi data transfer script
-
-#PBS -P aa00
-#PBS -N transfer
-#PBS -l walltime=10:00:00
-#PBS -l ncpus=1
-#PBS -l mem=8GB
-#PBS -W umask=022
-#PBS -q copyq
-#PBS -l wd
-#PBS -lstorage=scratch/aa00
-
-# Remote server details:
-remote_user=<unikey>
-remote_host=research-data-ext.sydney.edu.au
-remote_path=/rds/PRJ-<project>/<path>
-
-# Download a file from RDS to Gadi:
-#dest_path=/scratch/<project>/<path>
-#remote_file=<filename>
-#sftp ${remote_user}@${remote_host}:${remote_path}/${remote_file} ${dest_path} 
-
-# Download a directory from RDS to Gadi:
-dest_path=/scratch/aa00/fastqs
-remote_dir=/rds/PRJ-MYPROJECT/fastqs/cmt-fastqs
-sftp -r ${remote_user}@${remote_host}:${remote_path}/${remote_dir} ${dest_path} 
-
-# Upload a file from Gadi to RDS:
-#local_file=<filename>
-#sftp ${remote_user}@${remote_host}:${remote_path} <<< $"put ${local_file}" 
-
-# Upload a directory from Gadi to RDS:
-# CAVEAT: this method will only work if directory of the same name exists at destination! 
-#local_dir=<dirname>
-#sftp ${remote_user}@${remote_host}:${remote_path} <<< $"put -r ${local_dir}" 
-```
-
-**Run the transfer script**
-
-Once you have customised the script, you can submit it to the `copyq` on Gadi. Run the script from the directory where you saved it: 
-
-```bash
-qsub transfer.pbs
-```
-
-This can be a nerve-wracking process, especially if you are transferring large files. You can check the status of your job on Gadi using: 
-
-```bash
-qstat -Esw
-```
-
-Once it says R (running), you can confirm it is going to where you want on RDS/Artemis or Gadi by logging into the system and checking for the presence of the file/directory in its expected location using: 
-
-```bash
-ls <path>
-```
-
- **Confirm the transfer**
-
-To confirm the transfer was successful, you'll need to check your joblogs. These are located in the same directory as your script and are named `transfer.o<jobid>`. Check for **Exit status: 0**. If you see this, the transfer was successful. 
-
-However, this doesn't guarantee the integrity of the files. You should check the files themselves to ensure they are intact. You can do this using md5checksums. See this [SIH tidbits blogpost](https://sydney-informatics-hub.github.io/tidbits/safely-downloading-your-sequence-data-to-rds.html) about how to use these. You'll need to create md5checksums for the original files if they don't already exist and compare them after transfer.
-
+  + `from_rds_to_gadi.pbs` is used to transfer a file or folder from RDS to Gadi
 
 ::: {.callout-note collapse="true"}
 ## Transfer from Gadi to RDS
 
-1. Use `from_gadi_to_rds.pbs` script
-2. Replace variables in `<brackets>` as described above
-3. Log into RDS and make a directory with the same name as the directory you want to transfer from Gadi
-4. Provide the Gadi directory as `local_dir` variable by replacing `<folder>` with the name of the file you want to transfer
+`from_gadi_to_rds.pbs` script, replace variables in `<brackets>` as described:
 
 ```bash
 #!/bin/bash
 
-# Transfer a folder from Gadi to RDS
+# Transfer from Gadi to RDS
 #
 
 # Make the following replacements in this file:
-# <unikey>:      Your USyd unikey
-# <rds_project>: Your RDS project name
-# <path>:        The location on RDS to put your folder (Must exist on RDS)
-# <folder>:      The folder to copy
-# <nci_project>: Your NCI project name
+# <unikey>      : Your USyd unikey
+# <rds_project> : Your RDS project name
+# <local_path>  : The local file or folder you want to copy
+# <path>        : The location on RDS to put your folder
+# <nci_project> : Your NCI project name
 
 #PBS -P <nci_project>
 #PBS -N transfer
@@ -398,19 +270,17 @@ remote_user=<unikey>
 remote_host=research-data-ext.sydney.edu.au
 remote_path=/rds/PRJ-<rds_project>/<path>
 
-local_dir=<folder>
+local_path=<local_path>
 
-# CAVEAT: this method will only work if directory of the same name exists at destination!
-sftp ${remote_user}@${remote_host}:${remote_path} <<< $"put -r ${folder}"
+sftp ${remote_user}@${remote_host}:${remote_path} <<< $"put -r ${local_path}"
 ```
 :::
 
 :::{.callout-note collapse="true"}
-## Transfer from RDS to Gadi:
+## Transfer from RDS to Gadi
 
-1. Use `from_rds_to_gadi.pbs` script
-2. Replace variables in `<brackets>` as described above 
-3. Provide the RDS directory as `remote_dir` variable by replacing `<folder>` with the name of the file you want to transfer
+`from_rds_to_gadi.pbs` script, replace variables in `<brackets>` as described:
+
 
 ```bash
 #!/bin/bash
@@ -420,11 +290,11 @@ sftp ${remote_user}@${remote_host}:${remote_path} <<< $"put -r ${folder}"
 # on Gadi in /scratch/<nci_project>
 
 # Make the following replacements in this file:
-# <unikey>:      Your USyd unikey
-# <rds_project>: Your RDS project name
-# <path>:        The location on RDS of your data
-# <dirname>:     The name of the folder to copy
-# <nci_project>: Your NCI project name
+# <unikey>      : Your USyd unikey
+# <rds_project> : Your RDS project name
+# <path>        : The location on RDS of your data
+# <local_path>  : The name of the folder to copy to
+# <nci_project> : Your NCI project name
 
 #PBS -P <nci_project>
 #PBS -N transfer
@@ -443,14 +313,132 @@ remote_path=/rds/PRJ-<rds_project>/<path>
 remote_dir=<dirname>
 
 # Gadi:
-dest_path=/scratch/<nci_project>/<path>
+dest_path=/scratch/<nci_project>/<local_path>
 
 # Copy folder with sftp
 sftp -r ${remote_user}@${remote_host}:${remote_path}/${remote_dir} ${dest_path}
 ```
 :::
 
-::: {.callout-note collapse="true"}
+Here is an example showing you how to transfer a folder called `MyData` in the RDS project `MYPROJECT` to
+some scratch space in Gadi owned by project `aa00`.
+
+::: {.callout-note}
+# Example `copyq` transfer from RDS to Gadi
+
+Log into Gadi and change directory to your project space and make a folder for your workspace:
+
+```bash
+# Using an example username tm0000
+ssh tm0000@gadi.nci.org.au
+
+cd /scratch/aa00
+
+# Make a folder called workspace in /scratch
+mkdir /scratch/aa00/workspace
+```
+
+Copy the required data transfer script template from /scratch/qc03 to your newly made workspace. In this case we ar copying from RDS
+to Gadi so we use the `from_rds_to_gadi.pbs` script. You can also cut and paste the template script into your editor from above and
+then save the edited script to your workspace.
+
+```bash
+cp /scratch/qc03/data-transfer-scripts/gadi-scripts/from_rds_to_gadi.pbs /scratch/aa00/workspace
+```
+
+Then follow the script and move to that workspace and open the script in an editor (in this example we'll use the `nano` editor): 
+
+```bash
+cd /scratch/aa00/workspace
+
+nano from_rds_to_gadi.pbs
+```
+
+You need to edit the script by replacing all the variables marked with `<>` described in the script header and fill in the following details before using it:
+
+In the `# PBS` variables part of the script: 
+
+ + Provide the -P variable by replacing `<nci_project>` with your NCI project code. In this example `aa00`.
+
+ + Increase the walltime if you are transferring large files, the limit on this queue is 10 hours.
+
+ + Alter `-lstorage=scratch/<project>` as required. If you also need to access g/data, you can change this to `scratch/<project>+/gdata/<project>`. In this example we'll just use `/scratch/aa00`
+
+In the body of the script: 
+
+ + Provide the `remote_user` variable by replacing `<unikey>` with your USyd unikey.
+
+ + Provide the `remote_path` variable by replacing `<rds_project>` and `<local_path>` with your RDS project name and path to the file or directory you want to transfer. In this example we use `remote_path=/rds/PRJ-MYPROJECT/MyData`
+
+Here is what the script will look like when correctly edited for this example:
+
+```bash
+#!/bin/bash
+
+#PBS -P aa00
+#PBS -N transfer
+#PBS -l walltime=04:00:00
+#PBS -l ncpus=1
+#PBS -l mem=8GB
+#PBS -W umask=022
+#PBS -q copyq
+#PBS -l wd
+#PBS -lstorage=scratch/aa00
+
+# RDS:
+remote_user=tm0000     #Example unikey tm0000
+remote_host=research-data-ext.sydney.edu.au
+remote_path=/rds/PRJ-MYPROJECT/MyData
+
+# Gadi:
+# This will create /scratch/aa00/MyData if transferring a folder and it doesn't already exist.
+dest_path=/scratch/aa00/MyData
+
+# Copy with sftp
+sftp -r ${remote_user}@${remote_host}:${remote_path}/${remote_dir} ${dest_path}
+```
+
+When you have finished editing the script save it (using `<ctrl> - x` and answering `Y` at the prompt)
+
+**Run the transfer script**
+
+Once you have customised the script, you can submit it to the `copyq` on Gadi. Run the script from the directory where you saved it: 
+
+```bash
+qsub from_rds_to_gadi.pbs
+```
+
+This can be a nerve-wracking process, especially if you are transferring large files. You can check the status of your job on Gadi using: 
+
+```bash
+qstat -Esw
+```
+
+Once it says R (running), you can confirm it is going to where you want on RDS/Artemis or Gadi by logging into the system and checking for the presence of the file/directory in its expected location using: 
+
+```bash
+ls MyData
+```
+
+ **Confirm the transfer**
+
+To confirm the transfer was successful, you'll need to check your job logs. These are located in the same directory as your script and are named `transfer.o<jobid>`. Check for **Exit status: 0**. If you see this, the transfer was successful. 
+
+However, this doesn't guarantee the integrity of the files. You should check the files themselves to ensure they are intact. You can do this using md5checksums. See this [SIH tidbits blogpost](https://sydney-informatics-hub.github.io/tidbits/safely-downloading-your-sequence-data-to-rds.html) about how to use these. You'll need to create md5checksums for the original files if they don't already exist and compare them after transfer.
+:::
+
+
+#### Template copyq scripts for sync-ing data with `lftp`
+
+If you have a large project with many files and only a few of them are modified at any time you can use the `mirror` command in `lftp` to only sync the modified files when you are backing up data to RDS. The `lftp - mirror` command transfers data at a slower speed than `sftp` but will significantly speed up the backup of data since it generally only needs to copy a small subset of all of the data on Gadi if only a few files have changed since the last sync.
+
+Below is a template `.pbs` script that can be used to sync files between Gadi and RDS, you can copy it to your workspace and modify it as needed similarly to the example above. You can also find this script on Gadi in `/scratch/qc03/data-transfer-scripts/gadi-scripts/sync_gadi_to_rds.pbs`.
+
+:::{.callout-warning}
+Note that when using this script to copy a folder you should ensure the target directory exists on RDS first, otherwise the parent directory will not be synced with the data.
+:::
+
+:::{.callout-note collapse="true"}
 ## Sync between Gadi and RDS
 
 ```bash
@@ -498,19 +486,32 @@ EOF
 
 #### Suggested workflow for copying data between RDS and Gadi and keeping it up-to-date
 
-lftp is slower but does sync
-sftp is faster but doesent.
+The `sftp` copy method and `lftp` sync methods described above both have their pros and cons:
 
-suggested workflow is to copy the data in bulk from rds using sftp first and the keep it up-to-date with rds by syncing the data as required with lftp.
+ + `sftp` has a faster transfer speed but can only copy all your files in bulk when it is run.
 
-### Transfer using rsync from Artemis dtq - PRIOR TO DECOMISSION ONLY
+ + `lftp` has a slower transfer speed but it can sync only the subset of files that have changed.
 
-For transfer of large files directly from Artemis to Gadi, the use of resumable `rsync` is recommended (see script below). As the USyd RDS servers only allow sftp connections, this method is not possible to run on Gadi’s `copyq`. Instead, the transfer can be initiated using Artemis `dtq` and using Gadi’s data mover node: `gadi-dm.nci.org.au`. After the decomisison of Artemis, Globus will provide fast and reliable large data transfers. 
+Because of this we suggest users be selective about which method they use based on their needs.
 
-- provide example for single file transfer (as show at above link) - also put in the qc03 demo transfer scripts folder
-- provide example for recursive folder transfer (with comment about inclusion or exclusion of trailing slash on source path)
-- provide example for job array based transfer 
-- provide example for to gadi and from gadi by reversing host/source/dest
+For example a simple workflow for large projects that have a lot of data and many files in a folder, only a few of which are changed between backups to RDS would be:
+
+  1. Initially use the `sftp` based `from_rds_to_gadi.pbs` script to bulk copy your data from RDS to your project space on Gadi, since this is faster for bulk transfers.
+
+  2. Subsequently use the `lftp` based `sync_gadi_to_rds.pbs` to sync smaller files (e.g. output logs and data) back to RDS, without having to re-copy the bulk of the data back to RDS.
+
+### Transfer using rsync from Artemis dtq
+
+::: {.callout-warning}
+This option is only available prior to the decommission of Artemis on 29 August 2025 - after that date you will have to use either GLOBUS (*preferred*), or copy data when logged into the Gadi terminal (either at the login shell or using `copyq` scripts).
+:::
+
+For transfer of large files directly from Artemis to Gadi, the use of resumable `rsync` is recommended (see script below). The transfer can be initiated using Artemis `dtq` and using Gadi’s data mover node: `gadi-dm.nci.org.au`. The below template script can be used with Artemis' `dtq` using `rsync`.
+
+For further info about copying data from Artemis `dtq` can be found in the [SIH Artemis Training Series](https://sydney-informatics-hub.github.io/training.artemis.rds/04-rcos2hpc/index.html).
+
+:::{.callout-note collapse="true"}
+## Template Artemis data transfer script using `rsync`
 
 ```bash
 #!/bin/bash
@@ -547,6 +548,7 @@ do
         fi
 done
 ```
+:::
 
 ## Set up SSH keys for passwordless data transfer
 
